# MLBD-Project

./: .gitignore  Data_Cleaning.ipynb  Model.ipynb  Model_Fletch.ipynb  Model_clean.ipynb  README.md  RNN_test.ipynb  RQ1_FINAL.ipynb  RQ2_FINAL.ipynb  RQ2_Final.ipynb  RQ3_1_FINAL.ipynb  RQ3_2_FINAL.ipynb  chatbot_performance_analysis_2.ipynb  chatbot_performance_analysis_final.ipynb  gogymi_content_features.ipynb  m4_FFO.ipynb  m4_team-name.ipynb  m4_team-name.py  m4_team-name_local.py  m4_team-name_remote.py  m5_osc.ipynb  main.py  pyproject.toml  test_notebook.ipynb  top5_keywords_Essay_&_Writing_Help.csv  top5_keywords_General_Math_Workflow.csv  top5_keywords_Help_Requests_&_Control.csv  translate.py
.ipynb_checkpoints/: m4_team-name-checkpoint.ipynb
explorative/: Data_Cleaning.ipynb  m4_team-name.ipynb
src/: config.py  data_cleaning.py  features.py  helper.py
src/feature_extraction/: __init__.py  avg_performance.py  chatbot_usage.py  number_of_activities.py  study_days_per_student.py  test_difficulty.py  time_spent.py  time_spent_per_day.py
tests/: RQ3.2.ipynb  RQ3.ipynb
